projet_gl/src/test/deca/syntax/valid/while/while.deca
// Description:
//    test parser for while.
//
// Resultats:
//    `> [18, 0] Program
//       +> ListDeclClass [List with 0 elements]
//       `> [18, 0] Main
//          +> ListDeclVar [List with 0 elements]
//          `> ListInst [List with 1 elements]
//             []> [19, 4] While
//                 +> [19, 10] BooleanLiteral (true)
//                 `> ListInst [List with 1 elements]
//                    []> [20, 8] StringLiteral (ok)
//
// Historique:
//    cree le 12/01/2024

{
    while(true){
        "ok";
    }
}