projet_gl/src/test/deca/syntax/invalid/while/incorrectWhile.deca
// Description:
//    invalid test parser for while.
//
// Resultats:
//    ligne 14 : missing '}' at '<EOF>'.
//
// Historique:
//    cree le 12/01/2024

{
    while(true){
        "ok";
    
}